..F....... [ZBXNEXT-4374] implemented the widget configuration fields clearing when changing the type (ashubin)
A.F.I...S. [ZBXNEXT-4119] implemented tag based permissions (miks, Oleg, Sasha, Sergejs)
..F....... [ZBXNEXT-4045] implemented maximum size for graphs in widgets (gcalenko)
..F....... [ZBXNEXT-4340] added kiosk mode for dashboard (ashubin)

Bug fixes:
.......PS. [ZBX-13510] fixed error of execution "make dbschema" for NetBSD (MVekslers)
...G...... [ZBX-13544] fixed agent crashes when using regex with 'Log' item for Mac OSX (MVekslers)
........S. [ZBX-13611] fixed lld rules not always saving their state/error message changes (wiper)
........S. [ZBX-13571] fixed regression that resulted in slow history data queries on partitioned tables (wiper)
..F....... [ZBX-13490] fixed autofocus in forms (nikita)
........S. [ZBX-13470] improved searching IPMI items by full name (MVekslers)
..F....... [ZBX-13566] fixed create dashboard button size in dashboard list (Andzs)
..F....... [ZBX-13464] fixed fullscreen attribute included in host context menu links (ashubin)
A.F....... [ZBX-13424] added possibility to select web items as master items and improved copying of dependent items to destination hosts and templates (Ivo)
A......... [ZBX-13573] fixed undefined index message changing Action "Acknowledgment operations" from "Remote command" to "Notify all involved" (agriscenko)
A......... [ZBX-13570] fixed undefined index in API call (agriscenko)
A......... [ZBX-13331] removed "recovery" property from action.get API method response (nikita)
..F....... [ZBX-13309] fixed displaying of Problem/Recovery time (agriscenko, ashubin, Sasha)
.......PS. [ZBX-13450] fixed server and proxy compilation problem for Solaris 10 (MVekslers)
A.F....... [ZBX-13458,ZBX-13494] fixed resolving of the macros in map labels for non-superadmin users (Sasha)
..F....... [ZBX-13526] fixed widget placeholder jumping instead of resizing while dashboard edit (ashubin)